--- a/app/src/main/res/menu/menu_main.xml
+++ b/app/src/main/res/menu/menu_main.xml
@@ -4,7 +4,7 @@
 
     <item
         android:id="@+id/menu_home"
-        android:icon="@drawable/icon_home"
+        android:icon="@drawable/icon_home_outline"
         android:title="@string/home"
         app:cnb_backgroundColor="@color/red_light"
         app:cnb_iconColor="@color/white"
