--- a/app/src/main/res/layout/fragment_order_detail.xml
+++ b/app/src/main/res/layout/fragment_order_detail.xml
@@ -45,59 +45,9 @@
                     android:text="Tài xế đang chờ lấy hàng"
                     android:textSize="14dp" />
 
-                <LinearLayout
-                    android:id="@+id/orderStatusProgressLayout"
-                    android:layout_width="wrap_content"
-                    android:layout_height="28dp"
-                    android:background="@drawable/traking_toolbar"
-                    android:gravity="center"
-                    android:layout_gravity="center"
-                    android:layout_marginVertical="16dp"
-                    android:orientation="horizontal">
-
-                    <ImageView
-                        android:id="@+id/waitingOrderIcon"
-                        android:layout_width="28dp"
-                        android:layout_height="28dp"
-                        android:src="@drawable/icon_waiting_order" />
-
-                    <View
-                        android:id="@+id/progressView1"
-                        android:layout_width="80dp"
-                        android:layout_height="5dp"
-                        android:background="@color/red" />
-
-                    <ImageView
-                        android:id="@+id/cookingIcon"
-                        android:layout_width="28dp"
-                        android:layout_height="28dp"
-                        android:src="@drawable/icon_cooking" />
-
-                    <View
-                        android:id="@+id/progressView2"
-                        android:layout_width="80dp"
-                        android:layout_height="5dp"
-                        android:background="@color/red" />
-
-                    <ImageView
-                        android:id="@+id/deliveringIcon"
-                        android:layout_width="28dp"
-                        android:layout_height="28dp"
-                        android:src="@drawable/icon_delivering" />
-
-                    <View
-                        android:id="@+id/progressView3"
-                        android:layout_width="80dp"
-                        android:layout_height="5dp"
-                        android:background="@color/red" />
-
-                    <ImageView
-                        android:id="@+id/deliveredIcon"
-                        android:layout_width="28dp"
-                        android:layout_height="28dp"
-                        android:src="@drawable/icon_delivered" />
-
-                </LinearLayout>
+                <include
+                    layout="@layout/tracking_toolbar"
+                    android:id="@+id/tracking_toolbar"/>
 
                 <TextView
                     android:id="@+id/followOrderText"
